simple nav-menu for mobile view

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -79,3 +79,7 @@
       </div>
     </div>
   </nav>
+
+  <div *ngIf="isMenuOpen()" class="navmenu" (click)="onOutsideClick($event)">
+    <app-navmenu></app-navmenu>
+  </div>
